@@ -4795,22 +4795,92 @@ class testMeetingItem(PloneMeetingTestCase):
         item.processForm()
         # contact.png was saved in the item
         self.assertTrue('contact.png' in item.objectIds())
+        img = item.get('contact.png')
+        # external image link was updated
+        self.assertEqual(
+            item.getRawDescription(),
+            '<p>Working external image <img src="resolveuid/{0}"/>.</p>'.format(img.UID()))
 
         # test using the quickedit
         text = '<p>Working external image <img src="http://www.imio.be/mascotte-presentation.jpg"/>.</p>'
         setFieldFromAjax(item, 'description', text)
         self.assertTrue('mascotte-presentation.jpg' in item.objectIds())
+        img2 = item.get('mascotte-presentation.jpg')
+        # external image link was updated
+        self.assertEqual(
+            item.getRawDescription(),
+            '<p>Working external image <img src="resolveuid/{0}"/>.</p>'.format(img2.UID()))
 
         # test using at_post_edit_script, aka full edit form
         text = '<p>Working external image <img src="http://www.imio.be/spw.png"/>.</p>'
         item.setDescription(text)
         item._update_after_edit()
         self.assertTrue('spw.png' in item.objectIds())
+        img3 = item.get('spw.png')
+        # external image link was updated
+        self.assertEqual(
+            item.getRawDescription(),
+            '<p>Working external image <img src="resolveuid/{0}"/>.</p>'.format(img3.UID()))
+
+        # link to unknown external image, like during copy/paste of content
+        # that has a link to an unexisting image or so
+        text = '<p>Not working external image <img src="http://www.imio.be/unknown_image.png"/>.</p>'
+        item.setDescription(text)
+        item._update_after_edit()
+        self.assertTrue('spw.png' in item.objectIds())
+        # nothing was done
+        self.assertEqual(
+            sorted(item.objectIds()),
+            ['contact.png', 'mascotte-presentation.jpg', 'spw.png'])
+        self.assertEqual(item.getRawDescription(), text)
 
     def test_pm_ItemInternalImagesStoredLocallyWhenItemDuplicated(self):
         """When an item is duplicated, images that were stored in original item
            are kept in new item and uri to images are adapted accordingly in the
            new item XHTML fields."""
+        self.changeUser('pmCreator1')
+        item = self.create('MeetingItem')
+        # add images
+        file_path = path.join(path.dirname(__file__), 'dot.gif')
+        file_handler = open(file_path, 'r')
+        data = file_handler.read()
+        file_handler.close()
+        img_id = item.invokeFactory('Image', id='dot.gif', title='Image', file=data)
+        img = getattr(item, img_id)
+        img2_id = item.invokeFactory('Image', id='dot2.gif', title='Image', file=data)
+        img2 = getattr(item, img2_id)
+
+        # let's say we even have external images
+        text_pattern = '<p>External image <img src="{0}"/>.</p>' \
+            '<p>Internal image <img src="{1}"/>.</p>' \
+            '<p>Internal image 2 <img src="{2}"/>.</p>'
+        text = text_pattern.format(
+            'http://www.imio.be/contact.png',
+            img.absolute_url(),
+            'resolveuid/{0}'.format(img2.UID()))
+        item.setDescription(text)
+        self.assertEqual(item.objectIds(), ['dot.gif', 'dot2.gif'])
+        item._update_after_edit()
+        # we have images saved locally
+        self.assertEqual(sorted(item.objectIds()), ['contact.png', 'dot.gif', 'dot2.gif'])
+
+        # duplicate and check that uri are correct
+        newItem = item.clone()
+        self.assertEqual(sorted(newItem.objectIds()), ['contact.png', 'dot.gif', 'dot2.gif'])
+        new_img = newItem.get('contact.png')
+        new_img1 = newItem.get('dot.gif')
+        new_img2 = newItem.get('dot2.gif')
+        # every links are turned to resolveuid
+        self.assertEqual(
+            newItem.getRawDescription(),
+            text_pattern.format(
+                'resolveuid/{0}'.format(new_img.UID()),
+                'resolveuid/{0}'.format(new_img1.UID()),
+                'resolveuid/{0}'.format(new_img2.UID())))
+
+    def test_pm_TransformAllRichTextFields(self):
+        """Test that it does not alterate field content, especially
+           links to internal content or image that uses resolveuid."""
         self.changeUser('pmCreator1')
         item = self.create('MeetingItem')
         # add image
@@ -4821,24 +4891,14 @@ class testMeetingItem(PloneMeetingTestCase):
         img_id = item.invokeFactory('Image', id='dot.gif', title='Image', file=data)
         img = getattr(item, img_id)
 
-        # let's say we even have external images
-        text_pattern = '<p>External image <img src="{0}" />.</p>'\
-            '<p>Internal image <img src="{1}" />.</p>'
-        text = text_pattern.format('http://www.imio.be/contact.png', img.absolute_url())
+        # link to image using resolveuid
+        text = '<p>Internal image <img src="resolveuid/{0}" />.</p>'.format(img.UID())
         item.setDescription(text)
         self.assertEqual(item.objectIds(), ['dot.gif'])
+        # transformAllRichTextFields is called by MeetingItem.at_post_edit_script
+        # that is called by MeetingItem._update_after_edit...
         item._update_after_edit()
-        # we have images saved locally
-        self.assertEqual(sorted(item.objectIds()), ['contact.png', 'dot.gif'])
-
-        # duplicate and check that uri are correct
-        newItem = item.clone()
-        self.assertEqual(sorted(newItem.objectIds()), ['contact.png', 'dot.gif'])
-        self.assertEqual(
-            newItem.Description(),
-            text_pattern.format(
-                newItem.absolute_url() + '/contact.png',
-                newItem.absolute_url() + '/dot.gif'))
+        self.assertEqual(item.getRawDescription(), text)
 
     def test_pm_ItemLocalRolesUpdatedEvent(self):
         """Test this event that is triggered after the local_roles on the item have been updated."""
